[metadata]
name = bj
version = 0.0.6
url = https://github.com/t-c-w/bj
platforms = any
description_file = README.md
description = Generating hierarchical data
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = bj

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

